syntax="proto3";

package parquito;

option java_package = "com.markosindustries.parquito.schemas";
option java_multiple_files = true;

message Example {
  string some_string = 1;

  oneof example_oneof {
    ExampleChild some_child = 2;
    ExampleEnum some_enum = 3;
  }

  repeated ExampleRepeated some_repeated = 4;

  message ExampleRepeated {
    string some_string = 1;
    ExampleEnum some_enum = 2;
  }
}

message ExampleChild {
  string some_string = 1;
  repeated string some_strings = 2;
  uint64 some_number = 3;
  bytes some_binary = 4;
}

enum ExampleEnum {
  EXAMPLE_ENUM_UNKNOWN = 0;
  EXAMPLE_ENUM_ONE = 1;
  EXAMPLE_ENUM_TWO = 2;
}